--- a/data/seeds/organizations.yml
+++ b/data/seeds/organizations.yml
@@ -53,3 +53,8 @@
   url: https://bathruby.uk
   locations:
     - address: Bath, UK
+- name: Consonance
+  type: business
+  url: https://www.consonance.app
+  locations:
+    - address: 55 Hight St, Thame, OX9 3BH, UK
